<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gold1"
    tools:context=".MainActivity">

    <!-- Додаємо першу кнопку -->
    <Button
        android:id="@+id/btnDemo"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:background="@drawable/title_btn_bg"
        android:text="@string/title_btn_demo"
        android:textColor="@color/title_btn_fg"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Додаємо другу кнопку -->
    <Button
        android:id="@+id/btnWork"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:background="@drawable/title_btn_bg"
        android:text="@string/title_btn_work"
        android:textColor="@color/title_btn_fg"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_width="301dp"
        android:layout_height="62dp"
        android:text="@string/main_title"
        android:textColor="@color/main_title_fg"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


</androidx.constraintlayout.widget.ConstraintLayout>